--- a/pomodoro.html
+++ b/pomodoro.html
@@ -43,8 +43,8 @@
 
         <!-- Control Buttons -->
         <div class="flex justify-center space-x-4">
-            <button id="start-btn" class="w-32 py-3 px-6 bg-green-600 hover:bg-green-700 rounded-lg text-lg font-bold shadow-lg transition transform hover:scale-105 focus:outline-none focus:ring-2 focus:ring-green-500">START</button>
-            <button id="pause-btn" class="w-32 py-3 px-6 bg-yellow-500 hover:bg-yellow-600 rounded-lg text-lg font-bold shadow-lg transition transform hover:scale-105 focus:outline-none focus:ring-2 focus:ring-yellow-400">PAUSE</button>
+            <button id="start-btn" class="w-32 py-3 px-6 bg-green-600 hover:bg-green-700 rounded-lg text-lg font-bold shadow-lg transition transform hover:scale-105 focus:outline-none focus:ring-2 focus:ring-green-500 disabled:opacity-50 disabled:cursor-not-allowed">START</button>
+            <button id="pause-btn" class="w-32 py-3 px-6 bg-yellow-500 hover:bg-yellow-600 rounded-lg text-lg font-bold shadow-lg transition transform hover:scale-105 focus:outline-none focus:ring-2 focus:ring-yellow-400 disabled:opacity-50 disabled:cursor-not-allowed">PAUSE</button>
             <button id="reset-btn" class="w-32 py-3 px-6 bg-red-600 hover:bg-red-700 rounded-lg text-lg font-bold shadow-lg transition transform hover:scale-105 focus:outline-none focus:ring-2 focus:ring-red-500">RESET</button>
         </div>
     </div>
@@ -90,8 +90,16 @@
         function startTimer() {
             if (isRunning) return; // Prevent multiple intervals
             isRunning = true;
+            startBtn.disabled = true;
+            pauseBtn.disabled = false;
+
             // Ensure Tone.js is started by user interaction
-            Tone.start(); 
+            try {
+                Tone.start(); 
+            } catch (e) {
+                console.error("Audio context could not be started:", e);
+            }
+
             timerId = setInterval(() => {
                 timeRemaining--;
                 updateDisplay();
@@ -105,6 +113,8 @@
         function pauseTimer() {
             clearInterval(timerId);
             isRunning = false;
+            startBtn.disabled = false;
+            pauseBtn.disabled = true;
         }
 
         // Resets the timer to the current mode's default time
@@ -188,8 +198,10 @@
         document.addEventListener('DOMContentLoaded', () => {
             updateDisplay();
             updateUIForMode('pomodoro');
+            pauseBtn.disabled = true;
         });
 
     </script>
 </body>
 </html>
+
