--- a/pomodoro.html
+++ b/pomodoro.html
@@ -38,7 +38,7 @@
 
         <!-- Timer Display -->
         <div class="text-center mb-8">
-            <p id="timer-display" class="text-8xl md:text-9xl font-extrabold tracking-tighter">25:00</p>
+            <p id="timer-display" class="text-8xl md:text-9xl font-extrabold tracking-tighter text-gray-100">25:00</p>
         </div>
 
         <!-- Control Buttons -->
@@ -204,4 +204,5 @@
     </script>
 </body>
 </html>
+
 
