--- a/pomodoro.html
+++ b/pomodoro.html
@@ -26,7 +26,7 @@
 <body id="app-body" class="bg-gray-900 text-white flex items-center justify-center min-h-screen transition-bg">
 
     <div class="max-w-md w-full mx-auto p-6 md:p-8 bg-gray-800 bg-opacity-50 rounded-2xl shadow-2xl backdrop-blur-lg border border-gray-700">
-        <h1 class="text-3xl font-bold text-center mb-2">Pomodoro Timer</h1>
+        <h1 class="text-3xl font-bold text-center mb-2 text-white">Pomodoro Timer</h1>
         <p id="mode-indicator" class="text-center text-lg text-gray-400 mb-6">Time to Focus!</p>
 
         <!-- Timer Mode Selection -->
@@ -204,5 +204,6 @@
     </script>
 </body>
 </html>
+
 
 
